--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_otp_text_field: ^1.1.0+2
   mask_text_input_formatter: ^2.9.0
+  http: ^1.2.2
+  flutter_secure_storage: ^9.2.2
+
 
 dev_dependencies:
   flutter_test:
