--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
+  shared_preferences: ^2.3.2
+  dart_jsonwebtoken: ^2.14.0
 
 
 dev_dependencies:
