--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.0+2
   mask_text_input_formatter: ^2.9.0
   http: ^1.2.2
+  intl: ^0.19.0
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   dart_jsonwebtoken: ^2.14.0
