--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.3.2
   dart_jsonwebtoken: ^2.14.0
   flutter_svg: ^2.0.10+1
+  skeletonizer: ^1.4.2
 
 
 dev_dependencies:
