--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,30 +22,22 @@ dependencies:
   skeletonizer: ^1.4.2
   collection: ^1.18.0
   uuid: ^4.5.0
-
-
   async: any
   screenshot: ^3.0.0
+  flutter_native_splash: ^2.4.1
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+flutter_native_splash:
+  color: "#191919"
+  image: assets/varta-logo-small.png
 
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
@@ -93,6 +85,3 @@ flutter:
           weight: 900
         - asset: assets/fonts/GeistMono/GeistMono-UltraLight.ttf
           weight: 200
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
