--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 Django==5.0.7
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.0.1
 redis==5.1.1
