--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.15.2
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.0.1
+pytz==2024.2
 redis==5.1.1
 rq==1.16.2
 sqlparse==0.5.1
