--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_native_splash: ^2.4.1
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
+  share_plus: ^10.1.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
