--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -11,5 +11,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /varta-server/
 
+CMD ["apt-get", "install", "libmagic1"]
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
