--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_messaging: ^15.1.3
   share_plus: ^10.1.0
   path_provider: ^2.1.4
+  file_picker: ^8.1.3
 
 dev_dependencies:
   flutter_test:
