--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   share_plus: ^10.1.0
   path_provider: ^2.1.4
   file_picker: ^8.1.3
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
