--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
     - assets/icons/file-ppt.svg
     - assets/icons/file-xls.svg
     - assets/icons/camera.svg
+    - assets/icons/image.svg
+    - assets/icons/person.svg
     - assets/icons/video.svg
 
 
