In the back-end implement attachments and URL logic

--- a/server/.env.development
+++ b/server/.env.development
@@ -1,7 +1,7 @@
-DB_PASSWORD="YUMZ&~gx58pcc7a"
-DB_HOST="varta-db.cbc8e2msibqg.ap-south-1.rds.amazonaws.com"
+DB_PASSWORD="postgresql.db.praxchi@max3"
+DB_HOST="localhost"
 DB_PORT="5432"
-DB_NAME="vartadb"
+DB_NAME="varta-test-db"
 DB_USER="aadv1k"
 
 DEBUG = True
