--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+boto3==1.35.63
+botocore==1.35.63
 CacheControl==0.14.0
 cachetools==5.5.0
 certifi==2024.8.30
@@ -25,6 +27,7 @@ grpcio==1.67.0
 grpcio-status==1.67.0
 httplib2==0.22.0
 idna==3.10
+jmespath==1.0.1
 msgpack==1.1.0
 proto-plus==1.25.0
 protobuf==5.28.3
@@ -34,12 +37,15 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.9.0
 pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-magic==0.4.27
 redis==5.1.1
 requests==2.32.3
 rq==1.16.2
 rsa==4.9
+s3transfer==0.10.3
+six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
 uritemplate==4.1.1
