--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.1.4
   file_picker: ^8.1.3
   mime: ^2.0.0
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
