Fix some subtle but app-breaking changes; Emojis now work
- if both refresh and access toekn are found to be null at runtime, show user welcome screen
- initialize notifications properly? not sure anymore

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -68,6 +68,10 @@ flutter:
 
 
   fonts:
+    - family: NotoColorEmoji
+      fonts:
+        - asset: assets/fonts/NotoColorEmoji-Regular.ttf
+
     - family: Geist
       fonts:
         - asset: assets/fonts/Geist/Geist-Regular.ttf
