--- a/app/web/manifest.json
+++ b/app/web/manifest.json
@@ -1,35 +1,29 @@
 {
-    "name": "app",
-    "short_name": "app",
+    "name": "Varta",
+    "short_name": "Varta",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#191919",
-    "theme_color": "#191919",
-    "description": "A new Flutter project.",
+    "background_color": "#000000",
+    "theme_color": "#000000",
+    "description": "One-way multi-channel school communications app",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
-        {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
         {
             "src": "icons/Icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
             "src": "icons/Icon-maskable-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
+        },
+        {
+        "src": "icons/Icon-192.png",
+        "sizes": "192x192",
+        "type": "image/png"
         }
     ]
 }
